--- a/index-START.html
+++ b/index-START.html
@@ -15,6 +15,8 @@
 const recognition = new SpeechRecognition();
 recognition.interimResults = true;
 
+let p = document.createElement('p');
+
 </script>
 
 
