selecting the div with class words

--- a/index-START.html
+++ b/index-START.html
@@ -16,6 +16,7 @@ const recognition = new SpeechRecognition();
 recognition.interimResults = true;
 
 let p = document.createElement('p');
+const words = document.querySelector('.words');
 
 </script>
 
