Okay, taking a break for the evening.  Haven't been at this for very long, but it's been a long day.

--- a/index-START.html
+++ b/index-START.html
@@ -19,6 +19,11 @@ let p = document.createElement('p');
 const words = document.querySelector('.words');
 words.appendChild(p);
 
+recognition.addEventListener('results', e => {
+  console.log(e);
+});
+
+recognition.start();
 </script>
 
 
