I hate to have a cop out commit, just correcting a typo, but still getting over being sick

--- a/index-START.html
+++ b/index-START.html
@@ -19,7 +19,7 @@ let p = document.createElement('p');
 const words = document.querySelector('.words');
 words.appendChild(p);
 
-recognition.addEventListener('results', e => {
+recognition.addEventListener('result', e => {
   console.log(e);
 });
 
