Again, a weak commit.  Mea culpa.  In my defense, I've been coding Java quite a bit today for a class, it's just not something I have a repo for.  Will get more on track with this when homework is done.

--- a/index-START.html
+++ b/index-START.html
@@ -20,7 +20,7 @@ const words = document.querySelector('.words');
 words.appendChild(p);
 
 recognition.addEventListener('result', e => {
-  console.log(e);
+  console.log(e.results);
 });
 
 recognition.start();
