weak commit today, but I did finish up all my java homework tonight, so there was coding done.

--- a/index-START.html
+++ b/index-START.html
@@ -21,6 +21,7 @@ words.appendChild(p);
 
 recognition.addEventListener('result', e => {
   console.log(e.results);
+  const transcript = Array.from();
 });
 
 recognition.start();
