--- a/index-START.html
+++ b/index-START.html
@@ -21,7 +21,8 @@ words.appendChild(p);
 
 recognition.addEventListener('result', e => {
   console.log(e.results);
-  const transcript = Array.from();
+  const transcript = Array.from(e.results)
+    .map(result => result[0])
 });
 
 recognition.start();
