--- a/index-START.html
+++ b/index-START.html
@@ -23,6 +23,7 @@ recognition.addEventListener('result', e => {
   console.log(e.results);
   const transcript = Array.from(e.results)
     .map(result => result[0])
+    .map(result => result.transcript)
 });
 
 recognition.start();
