again, not a very meaty commit.  I'm in something of a doldrums on this little challenge I set for myself, but hoping to pull out of it soon.  I'm playing around with Docker a bit now too in addition to my Java coursework, so weak commits aren't necessarily a sign of inaction.

--- a/index-START.html
+++ b/index-START.html
@@ -20,11 +20,13 @@ const words = document.querySelector('.words');
 words.appendChild(p);
 
 recognition.addEventListener('result', e => {
-  console.log(e.results);
   const transcript = Array.from(e.results)
     .map(result => result[0])
     .map(result => result.transcript)
+    .join('')
 });
+
+recognition.addEventListener('end', recognition.start);
 
 recognition.start();
 </script>
