okay, this one needs to be reviewed at some point, because it's cool and all that you can make use of speech recognition with something that's native to the browser, but I am having problems getting this one working as advertised.  Will see what I can do.

--- a/index-START.html
+++ b/index-START.html
@@ -30,6 +30,9 @@ recognition.addEventListener('result', e => {
       p = document.createElement('p');
       words.appendChild(p);
     }
+    if(transcript.includes('get the weather')) {
+      console.log('Getting the weather...');
+    }
 });
 
 recognition.addEventListener('end', recognition.start);
